style: alterações para demonstrar qual use case está sendo logado no momento