@@ -23,6 +23,7 @@ import java.time.DayOfWeek;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
 
 public class Main {
 
@@ -47,10 +48,10 @@ public class Main {
     private static ClonarDietaUseCase clonarDietaUseCase;
 
     public static void main(String[] args) {
-        System.out.println("\nPaciente Use Cases:\n");
+        System.out.println("Paciente Use Cases:\n");
         inicializarPacienteUseCases();
 
-        System.out.println("\nCriar Alimentos, Refeicoes e Dia Use Cases:\n");
+        System.out.println("Criar Alimentos, Refeicoes e Dia Use Cases:\n");
         inicializarUseCasesDeCriacao();
     }
 
@@ -62,6 +63,7 @@ public class Main {
         ativarPacienteUseCase = new AtivarPacienteUseCase(pacienteDAO);
 
         // CDU001 – Cadastrar paciente
+        System.out.println("CDU001 - Cadastrar Paciente");
         Paciente paciente1 = new Paciente("123", "teste", LocalDate.of(2000, 7, 2),
                 16999998888L, "teste@email.com",90.0, 1.80, "ganhar massa");
         Paciente paciente2 = new Paciente("456", "teste2", LocalDate.of(2000, 8, 12),
@@ -69,12 +71,16 @@ public class Main {
 
         cadastrarPacienteUseCase.cadastrar(paciente1);
         cadastrarPacienteUseCase.cadastrar(paciente2);
+        System.out.println("--------------");
 
         // CDU0013 – Buscar Paciente
+        System.out.println("CDU0013 - Buscar Paciente");
         buscarPacienteUseCase.findByCpf("123").ifPresent(System.out::println);
         buscarPacienteUseCase.findByCpf("456").ifPresent(System.out::println);
+        System.out.println("--------------");
 
         // CDU002 – Editar paciente
+        System.out.println("CDU0013 - Editar Paciente");
         Paciente paciente1Update = new Paciente("123", "teste update", LocalDate.of(2000, 7, 2),
                 16999990000L, "teste@email.com",90.0, 1.82, "ganhar massa");
 
@@ -83,19 +89,25 @@ public class Main {
             buscarPacienteUseCase.findByCpf("123").ifPresent(System.out::println);
         }
         else System.out.println("Erro ao atualizar");
+        System.out.println("--------------");
 
         // [RF003]/[RF004] Inativar/Ativar Paciente
+        System.out.println("CDU003 - Inativar Paciente");
+
         if (ativarPacienteUseCase.inativar(paciente2)) {
             System.out.println("Desativado com sucesso");
             buscarPacienteUseCase.findByCpf("456").ifPresent(System.out::println);
         }
         else System.out.println("Erro ao desativar");
+        System.out.println("--------------");
 
+        System.out.println("CDU004 - Ativar Paciente");
         if (ativarPacienteUseCase.ativar(paciente2)) {
             System.out.println("Ativado com sucesso");
             buscarPacienteUseCase.findByCpf("456").ifPresent(System.out::println);
         }
         else System.out.println("Erro ao ativar");
+        System.out.println("--------------");
 
     }
 
@@ -111,13 +123,16 @@ public class Main {
         cadastrarDietaUseCase = new CadastrarDietaUseCase(dietaDAO);
 
         // CDU003 – Importar alimentos
+        System.out.println("CDU003 - Importar Alimentos");
         importarAlimentoUseCase.importarAlimentosCSV("src/main/resources/com/doo/sistemanutruco/docs/alimentos.csv");
 
         List<Alimento> alimentos = alimentoDAO.findAll();
         for (Alimento alimento : alimentos)
             System.out.println(alimento);
+        System.out.println("-------------");
 
         // CDU0012 – Cadastrar Refeição
+        System.out.println("CDU0012 - Cadastrar Refeição");
         List<Alimento> cafeDaManhaAlimentos = new ArrayList<>();
         cafeDaManhaAlimentos.add(alimentos.get(3)); // Pão
         cafeDaManhaAlimentos.add(alimentos.get(7)); // Queijo
@@ -143,19 +158,24 @@ public class Main {
 
         for (Refeicao refeicao : refeicaoDAO.findAll())
             System.out.println(refeicao);
+        System.out.println("--------------");
 
         // CDU0011 – Cadastrar Dia
+        System.out.println("CDU0011 - Cadastrar Dia");
         List<Refeicao> refeicoesSegunda = new ArrayList<>();
         refeicoesSegunda.add(cafeDaManha);
         refeicoesSegunda.add(almoco);
         Dia segunda = new Dia(DayOfWeek.MONDAY, refeicoesSegunda);
         cadastrarDiaUseCase.cadastrar(segunda);
-        System.out.println(diaDAO.findAll().getFirst());
+        System.out.println(diaDAO.findAll().get(0));
+        System.out.println("--------------");
 
         // CDU004 – Cadastrar dieta
+        System.out.println("CDU004 - Cadastrar Dieta");
         Dieta dieta1 = new Dieta("dieta1","ficar saudável", List.of(segunda));
         cadastrarDietaUseCase.cadastrar(dieta1);
-        System.out.println(dietaDAO.findAll().getFirst());
+        System.out.println(dietaDAO.findAll().get(0));
+        System.out.println("--------------");
     }
 
     private static void inicializarRefeicaoUseCases(){
